--- a/app/src/main/res/layout/edit_book_activity.xml
+++ b/app/src/main/res/layout/edit_book_activity.xml
@@ -5,6 +5,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_edit_book"
-        tools:context=".editBook.EditBookActivity">
+        tools:layout="@layout/edit_book_fragment"
+        tools:context=".edit_book.EditBookActivity">
 </FrameLayout>
