--- a/app/src/main/res/layout/library_fragment.xml
+++ b/app/src/main/res/layout/library_fragment.xml
@@ -3,7 +3,7 @@
 <androidx.recyclerview.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:listitem="@layout/book_list_item"
+        tools:listitem="@layout/library_list_item"
         tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="10"
         android:layout_width="match_parent"
