add progress background to bookLibraryItems

--- a/app/src/main/res/layout/add_book_fragment.xml
+++ b/app/src/main/res/layout/add_book_fragment.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="@string/edit_book_title"
+        android:text="@string/add_book_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toTopOf="@+id/AddBookFragment_contentScroll"
         app:layout_constraintEnd_toEndOf="parent"
