--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#82ada9</color>
     <color name="colorPrimaryDark">#547e7a</color>
     <color name="colorPrimaryLight">#b2dfdb</color>
+    <color name="colorPrimarySuperLight">#e8f5e9</color>
     <color name="colorAccent">#f5f5f5</color>
     <color name="colorMessage">#f5f5f5</color>
     <color name="colorSecondary">#81c784</color>
